# rosout_mcp_usecase

./: CMakeLists.txt  README.md  package.xml
launch/: main.launch.py
src/: main_processor.cpp  sub_processor.cpp  trigger_processor.cpp
